force-app/main/default/force-app/main/default/objects/ARMT_AuditLog__c/ARMT_AuditLog__c.object-meta.xml
<CustomObject>
    <label>ARMT Audit Log</label>
    <pluralLabel>ARMT Audit Logs</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Audit logging object referenced for execution and error tracking.</description>
</CustomObject>