force-app/main/default/force-app/main/default/objects/ARMT_AuditLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scan Started</fullName>
            </value>
            <value>
                <fullName>Validation Run</fullName>
            </value>
            <value>
                <fullName>Migration Started</fullName>
            </value>
            <value>
                <fullName>Migration Paused</fullName>
            </value>
            <value>
                <fullName>Migration Resumed</fullName>
            </value>
            <value>
                <fullName>Rollback Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>