force-app/main/default/force-app/main/default/objects/ARMT_AuditLog__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>