force-app/main/default/force-app/main/default/objects/ARMT_AuditLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ARMT Audit Logs</relationshipLabel>
    <relationshipName>ARMT_Audit_Logs</relationshipName>
    <required>true</required>
</CustomField>